# BioFaceIdentificationSystem

./: .env.example  .gitignore  README.md  config.py  docker-compose.yml  fix_qt_plugins.py  main.py  pyproject.toml  run_gui.sh
alembic/: env.py
alembic/versions/: 243a02a9f0a4_initial_migration.py
core/: __init__.py  face_detector.py  face_encoder.py  face_recognizer.py  identification.py  image_processor.py  quality_validator.py  registration.py  video_capture.py
database/: connection.py  models.py  repositories.py
scripts/: identify_user.py  init_db.py  register_user.py  test_core_modules.py  test_db.py
ui/: __init__.py  admin_panel.py  admin_window.py  main_window.py
ui/components/: video_widget.py
utils/: logger.py
