[project]
name = "biofaceidentificationsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dlib>=20.0.0",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pyqt5>=5.15.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.45",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
